# computer-vision

./: Opencv_Debug.props  Opencv_Release.props  README.md
Assignment1/: Assignment1.sln
Assignment1/Assignment1/: Assignment1.vcxproj  Assignment1.vcxproj.filters  camera1_output.xml  camera2_output.xml  camera3_output.xml  camera4_output.xml  camera_calibration.cpp  default.xml  images.xml  out_camera_data.xml
Assignment1/Assignment1/videos/: 1.avi  2.avi
Assignment2/: .cproject  .project  CMakeLists.txt  VoxelReconstruction.sln  VoxelReconstruction.vcxproj  VoxelReconstruction.vcxproj.filters
Assignment2/.externalToolBuilders/: CMake_VoxelReconstruction_public.launch
Assignment2/data/: checkerboard.xml
Assignment2/data/cam1/: background.avi  boardcorners.xml  checkerboard.avi  config.xml  intrinsics.xml  video.avi
Assignment2/data/cam2/: background.avi  boardcorners.xml  checkerboard.avi  config.xml  intrinsics.xml  video.avi
Assignment2/data/cam3/: background.avi  boardcorners.xml  checkerboard.avi  config.xml  intrinsics.xml  video.avi
Assignment2/data/cam4/: background.avi  boardcorners.xml  checkerboard.avi  config.xml  intrinsics.xml  video.avi
Assignment2/include/: Camera.h  Clustering.h  ColorHistogram.h  ColorModel.h  General.h  Glut.h  MeanColorModel.h  Reconstructor.h  Scene3DRenderer.h  VoxelReconstruction.h  arcball.h
Assignment2/src/: Clustering.cpp  ColorHistogram.cpp  ColorModel.cpp  MeanColorModel.cpp  VoxelReconstruction.cpp
Assignment2/src/controllers/: Camera.cpp  Glut.cpp  Reconstructor.cpp  Scene3DRenderer.cpp  arcball.cpp
Assignment2/src/utilities/: General.cpp
